@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/ncatted.c,v 1.126 2010-01-26 13:06:25 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/ncatted.c,v 1.127 2010-04-09 20:57:00 zender Exp $ */
 
 /* ncatted -- netCDF attribute editor */
 
@@ -144,8 +144,8 @@ main(int argc,char **argv)
   char *fl_pth_lcl=NULL; /* Option l */
   char *opt_crr=NULL; /* [sng] String representation of current long-option name */
 
-  const char * const CVS_Id="$Id: ncatted.c,v 1.126 2010-01-26 13:06:25 zender Exp $"; 
-  const char * const CVS_Revision="$Revision: 1.126 $";
+  const char * const CVS_Id="$Id: ncatted.c,v 1.127 2010-04-09 20:57:00 zender Exp $"; 
+  const char * const CVS_Revision="$Revision: 1.127 $";
   const char * const opt_sht_lst="Aa:D:hl:Oo:p:Rr-:";
   
 #if defined(__cplusplus) || defined(PGI_CC)
@@ -353,13 +353,11 @@ main(int argc,char **argv)
   ddra_info.tmr_flg=nco_tmr_rgl;
 
   for(idx=0;idx<nbr_aed;idx++){
-    /* Edit attribute for every variable */
     if(aed_lst[idx].var_nm == NULL){
-      for(idx_var=0;idx_var<nbr_var_fl;idx_var++) 
-	(void)nco_aed_prc(nc_id,idx_var,aed_lst[idx]);
-    } 
-    /* regular expression */       
-    else if(strpbrk(aed_lst[idx].var_nm,".*^$\\[]()<>+?|{}")){
+      /* Variable name is blank so edit same attribute for all variables ... */
+      for(idx_var=0;idx_var<nbr_var_fl;idx_var++) (void)nco_aed_prc(nc_id,idx_var,aed_lst[idx]);
+    }else if(strpbrk(aed_lst[idx].var_nm,".*^$\\[]()<>+?|{}")){
+      /* Variable name contains a "regular expression" (rx) ... */
         int nbr_xtr=1;
         nm_id_sct *xtr_lst=NULL;
 
@@ -370,18 +368,15 @@ main(int argc,char **argv)
 
           /* Free Extraction list  */
         xtr_lst=nco_nm_id_lst_free(xtr_lst,nbr_xtr);
-    }
-    /* global variable */
-    else if(!strcmp(aed_lst[idx].var_nm,"global")) {
-       /* Edit Global attribute */
+    }else if(!strcmp(aed_lst[idx].var_nm,"global")){
+      /* Variable name indicates a global attribute ... */
       (void)nco_aed_prc(nc_id,NC_GLOBAL,aed_lst[idx]);
     }else{ 
-        /* regular variable */
-        (void)nco_inq_varid(nc_id,aed_lst[idx].var_nm,&aed_lst[idx].id);
-        /* Edit attribute */
-        (void)nco_aed_prc(nc_id,aed_lst[idx].id,aed_lst[idx]);
-    }
-
+      /* Variable is a normal variable ... */
+      (void)nco_inq_varid(nc_id,aed_lst[idx].var_nm,&aed_lst[idx].id);
+      /* Edit attribute */
+      (void)nco_aed_prc(nc_id,aed_lst[idx].id,aed_lst[idx]);
+    } /* end var_nm */
   } /* end loop over idx */
   
   /* Catenate the timestamped command line to the "history" global attribute */
