@@ -1,3 +1,7 @@
+2010-04-09  Charlie Zender  <zender@uci.edu>
+
+	* Clean-up ncatted to address NUL-append problem
+
 2010-04-08  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.0.2 release procedure:
